--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
@@ -9,7 +9,85 @@
         <ToolbarItem Text="Add" Command="{Binding AddBookCommand}" />
     </ContentPage.ToolbarItems>
 
-    <RefreshView x:DataType="local:BookViewModel" Command="{Binding LoadBooksCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+    <ContentPage.Content>
+        <StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Books" 
+                       Margin="8,8,8,0"
+                       FontSize="Medium"
+                       TextColor="Crimson"
+                       FontAttributes="Bold"/>
+
+                <!--<Label HorizontalOptions="EndAndExpand"
+                       Text="See All" 
+                       FontAttributes="Bold"
+                       Margin="0,8,8,0" 
+                       FontSize="Medium"
+                       TextColor="DarkGray"/>-->
+            </StackLayout>
+            <RefreshView x:DataType="local:BookViewModel" Command="{Binding LoadBooksCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+                <CollectionView ItemsSource="{Binding Books}" x:Name="ItemsListView" SelectionMode="None">
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout Orientation="Vertical" Span="6"/>
+                    </CollectionView.ItemsLayout>
+
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Padding="8" Margin="4" x:DataType="model:Book">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="3*" />
+                                    <RowDefinition Height="1*" />
+                                </Grid.RowDefinitions>
+
+                               
+                                <Image Source="{Binding Url_cover}"
+                                               Grid.Row="0"
+                                               Aspect="AspectFit" 
+                                               WidthRequest="30"
+                                               HeightRequest="150"
+                                               />
+
+                                
+                                <StackLayout Grid.Row="1">
+                                    <Label Grid.Column="1"
+                                                   VerticalOptions="Center"
+                                                   Text="{Binding Title}"
+                                                   FontAttributes="Bold"
+                                                   TextColor="White"    
+                                                   />
+
+                                    <!--deskripsi buku opsional-->
+                                    <Label Text="{Binding Description_book}"
+                                                    Grid.Row="1"
+                                                    Grid.Column="1"
+                                                    VerticalOptions="Start"
+                                                    FontAttributes="Italic"
+                                                    TextColor="White"
+                                                    />
+                                   
+
+                                    <StackLayout.GestureRecognizers>
+                                        <TapGestureRecognizer 
+                                            NumberOfTapsRequired="1"
+                                            Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
+                                            CommandParameter="{Binding .}">
+                                        </TapGestureRecognizer>
+                                    </StackLayout.GestureRecognizers>
+                                </StackLayout>
+
+                            </Grid>
+
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
+            </RefreshView>
+        </StackLayout>
+    </ContentPage.Content>
+
+    
+
+    <!--<RefreshView x:DataType="local:BookViewModel" Command="{Binding LoadBooksCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Books}"
                 SelectionMode="None">
@@ -36,5 +114,5 @@
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-    </RefreshView>
+    </RefreshView>-->
 </ContentPage>
