--- a/ENSIKLO/ENSIKLO/ENSIKLO/Register.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Register.xaml
@@ -1,9 +1,22 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage
-    xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="ENSIKLO.Register">
-    <ContentPage.Content>
-        
-    </ContentPage.Content>
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="ENSIKLO.Register">
+
+    <StackLayout>
+        <Image VerticalOptions="CenterAndExpand" Source="./Assets/logo.png" />
+        <Frame VerticalOptions="CenterAndExpand" CornerRadius="10" Margin="150,0" Padding="100,35">
+            <StackLayout>
+                <Entry Placeholder="Email"></Entry>  
+                <Entry Placeholder="Password" IsPassword="True"></Entry>  
+                <Button BackgroundColor="#009BF0" CornerRadius="10" TextColor="White" Text="Sign Up" Margin="0,20"></Button>
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Have an account?"></Label>
+                    <Label Text="Sign In" TextColor="#009BF0"></Label>
+                </StackLayout>  
+          
+          </StackLayout>
+        </Frame>
+    </StackLayout>
+
 </ContentPage>
