--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
@@ -2,11 +2,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENSIKLO.Views.BookDetailPage">
-    <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Title }" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Description_book}" FontSize="Small"/>
-        <Label Text="{Binding Publisher}" FontSize="Small"/>
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Delete Book" Command="{Binding DeleteBookCommand}" />
+    </ContentPage.ToolbarItems>
+
+
+    <StackLayout Spacing="20" Padding="15" BackgroundColor="AliceBlue">
+        <Label Text="Text:" FontSize="Medium" TextColor="Black"/>
+        <Label Text="{Binding Title }" FontSize="Small" TextColor="Black"/>
+        <Label Text="Description:" FontSize="Medium" TextColor="Black"/>
+        <Label Text="{Binding Description_book}" FontSize="Small" TextColor="Black"/>
+        <Label Text="{Binding Publisher}" FontSize="Small" TextColor="Black"/>
     </StackLayout>
 </ContentPage>
