--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/NewBookPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/NewBookPage.xaml
@@ -5,21 +5,60 @@
              Shell.PresentationMode="ModalAnimated"
              Title="New Item"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+             xmlns:renderers="clr-namespace:ENSIKLO.Renderers"
              ios:Page.UseSafeArea="true">
     <ContentPage.Content>
-        <StackLayout Spacing="6" Padding="15">
-            <Label Text="Title" FontSize="Medium" />
-            <Entry Text="{Binding Title , Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Description Book" FontSize="Medium" />
-            <Editor Text="{Binding Description_book, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
-            <Label Text="Publisher" FontSize="Medium" />
-            <Entry Text="{Binding Publisher, Mode=TwoWay}" FontSize="Medium" />
-            <Label Text="Url Cover" FontSize="Medium" />
-            <Editor Text="{Binding Url_cover, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
-            <Label Text="Author" FontSize="Medium" />
-            <Entry Text="{Binding Author_names, Mode=TwoWay}" FontSize="Medium" />
+        <StackLayout Spacing="6" Padding="15" Margin="45, 90, 45, 45">
+            <Label Text="Properties" FontSize="Large" FontAttributes="Bold" Grid.Column="0"/>
+            <Grid ColumnDefinitions="200, *">
+                <Label Text="Title" FontSize="Medium" Grid.Column="0"/>
+                <renderers:RoundedEditor Text="{Binding Title , Mode=TwoWay}" FontSize="Medium" Grid.Column="1"/>
+            </Grid>
+
+            <Grid ColumnDefinitions="200, *">
+                <Label Text="Author" FontSize="Medium" Grid.Column="0"/>
+                <renderers:RoundedEditor Text="{Binding Author, Mode=TwoWay}" FontSize="Medium" Grid.Column="1"/>
+            </Grid>
+
+            <Grid>
+                <Grid ColumnDefinitions="200, *" Grid.Column="0">
+                    <Label Text="Publisher" FontSize="Medium" Grid.Column="0"/>
+                    <renderers:RoundedEditor Text="{Binding Publisher, Mode=TwoWay}" FontSize="Medium" Grid.Column="1"/>
+                </Grid>
+                <Grid Grid.Column="1">
+                    <Label Text="Year" FontSize="Medium" Grid.Column="0"/>
+                    <renderers:RoundedEditor Text="{Binding Year_published, Mode=TwoWay}" FontSize="Medium" Grid.Column="1"/>
+                </Grid>
+            </Grid>
+
+            <Grid ColumnDefinitions="200, *">
+                <Label Text="Book content" FontSize="Medium" Grid.Column="0"/>
+                <renderers:RoundedEditor Text="{Binding Book_content, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" Grid.Column="1"/>
+            </Grid>
             
-            <StackLayout Orientation="Horizontal">
+            <Grid ColumnDefinitions="200, *">
+                <Label Text="Description Book" FontSize="Medium" Grid.Column="0"/>
+                <renderers:RoundedEditor Text="{Binding Description_book, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" Grid.Column="1"/>
+            </Grid>
+
+            <Grid ColumnDefinitions="200, *">
+                <Label Text="Url Cover" FontSize="Medium" Grid.Column="0"/>
+                <renderers:RoundedEditor Text="{Binding Url_cover, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" Grid.Column="1"/>
+            </Grid>
+
+            <Grid ColumnDefinitions="200, *">
+                <Label Text="Categories" FontSize="Medium" Grid.Column="0"/>
+                <!--<renderers:RoundedEditor Text="{Binding Category, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" Grid.Column="1"/>-->
+                <!--<Picker x:Name="CatPicker" FontSize="Medium" Margin="0" Grid.Column="1" SelectedItem="{Binding Category}"/>-->
+                <renderers:RoundedEditor Text="{Binding Category, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" Grid.Column="1"/>
+            </Grid>
+
+            <Grid ColumnDefinitions="200, *">
+                <Label Text="Keywords" FontSize="Medium" Grid.Column="0"/>
+                <renderers:RoundedEditor Text="{Binding Keywords, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" Grid.Column="1"/>
+            </Grid>
+
+            <StackLayout Orientation="Horizontal" Margin="0, 30, 0, 0">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
             </StackLayout>
