--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
@@ -10,19 +10,122 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout BackgroundColor="AliceBlue">
+        <StackLayout BackgroundColor="White">
+
+            <Label Text="Have you read a book today?" TextColor="#009BF0" Margin="15" FontSize="20"/>
+            <Frame CornerRadius="20" 
+                   HorizontalOptions="Center" 
+                   VerticalOptions="Start"
+                   HasShadow="True"
+                   IsClippedToBounds="True"
+                   BackgroundColor="#009BF0"
+                   Margin="10"
+                   Padding="0">
+                <StackLayout
+                    Margin="10"
+                    HeightRequest="300">
+                    <StackLayout Margin="8" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                        <Label Text="Newest Arrival!" FontSize="17"/>
+                        <Label HorizontalOptions="EndAndExpand" Text="View all catalogue" FontSize="17">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer 
+                                Command="{Binding TappedCommand}"
+                                />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+
+                    
+
+                    <RefreshView x:DataType="local:BookViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+
+                       
+                        <CollectionView 
+                            ItemsSource="{Binding Books}" 
+                            Margin="10"
+                            x:Name="ItemsListViewUp" 
+                            SelectionMode="Single"
+                            SelectedItem="{Binding SelectedBook}"
+                            >
+                            <CollectionView.ItemsLayout>
+                                <GridItemsLayout Orientation="Horizontal" Span="1" HorizontalItemSpacing="6"/>
+                            </CollectionView.ItemsLayout>
+
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Frame CornerRadius="12" 
+                                       HorizontalOptions="Center" 
+                                       VerticalOptions="Start"
+                                       HasShadow="True"
+                                       BackgroundColor="White"
+                                       BorderColor="Gray"
+                                       
+                                       
+                                       IsClippedToBounds="True"
+                                       Padding="0">
+                                        
+                                            <Grid Padding="8" Margin="4" x:DataType="model:Book" >
+
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height=".5*" />
+                                                    <RowDefinition Height="1*" />
+                                                </Grid.RowDefinitions>
+
+
+                                                <Image Source="{Binding Url_cover}"
+                                                       Grid.Row="0"
+                                                       Aspect="AspectFit" 
+                                                       WidthRequest="100"
+                                                       HeightRequest="150"
+                                                       />
+
+                                                <StackLayout Grid.Row="1">
+
+                                                <Label Grid.Column="1"
+                                                   VerticalOptions="Center"
+                                                   TextColor="Black"
+                                                   Text="{Binding Title}"
+                                                   FontAttributes="Bold" />
+
+
+                                                <Label Text="{Binding Author}"
+                                                    Grid.Row="1"
+                                                    Grid.Column="1"
+                                                    VerticalOptions="Start"
+                                                    TextColor="Black"
+                                                    FontAttributes="Italic" />
+                                                </StackLayout>
+                                        
+                                        
+                                        </Grid>
+                                    
+
+                                    </Frame>
+
+                                </DataTemplate>
+                                    
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                        
+                    </RefreshView>
+                </StackLayout>
+            </Frame>
             
-            <RefreshView x:DataType="local:BookViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+
+
+            <!--<RefreshView x:DataType="local:BookViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+
+
+
                 <CollectionView 
                         ItemsSource="{Binding Books}" 
-                        Margin="10"
                         x:Name="ItemsListView" 
                         SelectionMode="Single"
                         HeightRequest="100"
                         SelectedItem="{Binding SelectedBook}"
                         >
                     <CollectionView.ItemsLayout>
-                        <GridItemsLayout Orientation="Vertical" Span="6" HorizontalItemSpacing="4" VerticalItemSpacing="4"/>
+                        <GridItemsLayout Orientation="Vertical" Span="6" HorizontalItemSpacing="4"/>
                     </CollectionView.ItemsLayout>
 
                     <CollectionView.ItemTemplate>
@@ -61,7 +164,9 @@
                                                        TextColor="Black"    
                                                        />
 
-                                    <!--deskripsi buku opsional-->
+                                    -->
+            <!--deskripsi buku opsional-->
+            <!--
                                     <Label Text="{Binding Description_book}"
                                                         Grid.Row="1"
                                                         Grid.Column="1"
@@ -71,13 +176,15 @@
                                                         />
 
 
-                                    <!--<StackLayout.GestureRecognizers>
+                                    -->
+            <!--<StackLayout.GestureRecognizers>
                                             <TapGestureRecognizer 
                                                 NumberOfTapsRequired="1"
                                                 Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
                                                 CommandParameter="{Binding .}">
                                             </TapGestureRecognizer>
                                         </StackLayout.GestureRecognizers>-->
+            <!--
                                 </StackLayout>
 
                             </Grid>
@@ -86,38 +193,7 @@
                     </CollectionView.ItemTemplate>
                 </CollectionView>
 
-            </RefreshView>
+            </RefreshView>-->
         </StackLayout>
     </ContentPage.Content>
-
-
-
-    <!--<RefreshView x:DataType="local:BookViewModel" Command="{Binding LoadBooksCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-        <CollectionView x:Name="ItemsListView"
-                ItemsSource="{Binding Books}"
-                SelectionMode="None">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <StackLayout Padding="10" x:DataType="model:Book">
-                        <Label Text="{Binding Title}" 
-                            LineBreakMode="NoWrap" 
-                            Style="{DynamicResource ListItemTextStyle}" 
-                            FontSize="16" />
-                        <Label Text="{Binding Description_book}" 
-                            LineBreakMode="NoWrap"
-                            Style="{DynamicResource ListItemDetailTextStyle}"
-                            FontSize="13" />
-                        <Image Source="{Binding Url_cover}"/>
-                        <StackLayout.GestureRecognizers>
-                            <TapGestureRecognizer 
-                                NumberOfTapsRequired="1"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
-                                CommandParameter="{Binding .}">
-                            </TapGestureRecognizer>
-                        </StackLayout.GestureRecognizers>
-                    </StackLayout>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </RefreshView>-->
 </ContentPage>
