--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
@@ -10,190 +10,204 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout BackgroundColor="White">
+        <ScrollView Orientation="Vertical">
 
+        <StackLayout BackgroundColor="WhiteSmoke">
+            
             <Label Text="Have you read a book today?" TextColor="#009BF0" Margin="15" FontSize="20"/>
             <Frame CornerRadius="20" 
-                   HorizontalOptions="Center" 
-                   VerticalOptions="Start"
-                   HasShadow="True"
-                   IsClippedToBounds="True"
-                   BackgroundColor="#009BF0"
-                   Margin="10"
-                   Padding="0">
+                       HorizontalOptions="Center" 
+                       VerticalOptions="Start"
+                       HasShadow="True"
+                       IsClippedToBounds="True"
+                       BackgroundColor="#009BF0"
+                       Margin="10"
+                       Padding="0"
+                    >
+                
                 <StackLayout
-                    Margin="10"
-                    HeightRequest="300">
+                        Margin="10"
+                        HeightRequest="230">
+                    
                     <StackLayout Margin="8" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                         <Label Text="Newest Arrival!" FontSize="17"/>
                         <Label HorizontalOptions="EndAndExpand" Text="View all catalogue" FontSize="17">
                             <Label.GestureRecognizers>
                                 <TapGestureRecognizer 
-                                Command="{Binding TappedCommand}"
-                                />
+                                    Command="{Binding TappedCommand}"
+                                    />
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
 
-                    
+
 
                     <RefreshView x:DataType="local:BookViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
 
-                       
+
                         <CollectionView 
-                            ItemsSource="{Binding Books}" 
-                            Margin="10"
-                            x:Name="ItemsListViewUp" 
-                            SelectionMode="Single"
-                            SelectedItem="{Binding SelectedBook}"
-                            >
+                                ItemsSource="{Binding Books}" 
+                                Margin="10"
+                                x:Name="ItemsListViewUp" 
+                                SelectionMode="Single"
+                                SelectedItem="{Binding SelectedBook}"
+                                EmptyView="No data Available"
+                                >
+                                
                             <CollectionView.ItemsLayout>
                                 <GridItemsLayout Orientation="Horizontal" Span="1" HorizontalItemSpacing="6"/>
                             </CollectionView.ItemsLayout>
 
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
+                                    
                                     <Frame CornerRadius="12" 
-                                       HorizontalOptions="Center" 
-                                       VerticalOptions="Start"
-                                       HasShadow="True"
-                                       BackgroundColor="White"
-                                       BorderColor="Gray"
-                                       
-                                       
-                                       IsClippedToBounds="True"
-                                       Padding="0">
-                                        
-                                            <Grid Padding="8" Margin="4" x:DataType="model:Book" >
+                                           HorizontalOptions="Center" 
+                                           VerticalOptions="Start"
+                                           HasShadow="True"
+                                           BackgroundColor="White"
+                                           BorderColor="Gray"         
+                                           IsClippedToBounds="True"
+                                           Padding="0">
 
-                                                <Grid.RowDefinitions>
-                                                    <RowDefinition Height=".5*" />
-                                                    <RowDefinition Height="1*" />
-                                                </Grid.RowDefinitions>
+                                        <Grid x:DataType="model:Book" >
 
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height=".5*" />
+                                                <RowDefinition Height="1*" />
+                                            </Grid.RowDefinitions>
 
-                                                <Image Source="{Binding Url_cover}"
-                                                       Grid.Row="0"
-                                                       Aspect="AspectFit" 
-                                                       WidthRequest="100"
-                                                       HeightRequest="150"
-                                                       />
+                                               
+                                                    <Image Source="{Binding Url_cover}"
+                                                           Grid.Row="0"
+                                                           Aspect="AspectFill" 
+                                                           WidthRequest="100"
+                                                           HeightRequest="100"
+                                                           />
+                                                
 
                                                 <StackLayout Grid.Row="1">
 
                                                 <Label Grid.Column="1"
-                                                   VerticalOptions="Center"
-                                                   TextColor="Black"
-                                                   Text="{Binding Title}"
-                                                   FontAttributes="Bold" />
+                                                       HorizontalOptions="CenterAndExpand"
+                                                       TextColor="Black"
+                                                       Text="{Binding Title}"
+                                                       FontAttributes="Bold"
+                                                      />
 
 
                                                 <Label Text="{Binding Author}"
-                                                    Grid.Row="1"
-                                                    Grid.Column="1"
-                                                    VerticalOptions="Start"
-                                                    TextColor="Black"
-                                                    FontAttributes="Italic" />
-                                                </StackLayout>
-                                        
-                                        
+                                                        Grid.Row="1"
+                                                        Grid.Column="1"
+                                                        HorizontalOptions="CenterAndExpand"
+                                                        TextColor="Black"
+                                                        FontAttributes="Italic"
+                                                        />
+                                            </StackLayout>
+
+
                                         </Grid>
-                                    
+
 
                                     </Frame>
 
                                 </DataTemplate>
-                                    
+
                             </CollectionView.ItemTemplate>
                         </CollectionView>
-                        
+
                     </RefreshView>
                 </StackLayout>
             </Frame>
-            
-
-
-            <!--<RefreshView x:DataType="local:BookViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
 
 
 
-                <CollectionView 
-                        ItemsSource="{Binding Books}" 
-                        x:Name="ItemsListView" 
-                        SelectionMode="Single"
-                        HeightRequest="100"
-                        SelectedItem="{Binding SelectedBook}"
-                        >
-                    <CollectionView.ItemsLayout>
-                        <GridItemsLayout Orientation="Vertical" Span="6" HorizontalItemSpacing="4"/>
-                    </CollectionView.ItemsLayout>
+                <RefreshView x:DataType="local:BookViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+                    <CollectionView 
+                            ItemsSource="{Binding Books}" 
+                            x:Name="ItemsListView" 
+                            SelectionMode="Single"
+                            HeightRequest="100"
+                            SelectedItem="{Binding SelectedBook}"
+                            >
+                        <CollectionView.EmptyView>
 
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Padding="8" Margin="4" x:DataType="model:Book" BackgroundColor="White">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="0.5*" />
-                                    <RowDefinition Height="3*" />
-                                    <RowDefinition Height="1*" />
-                                </Grid.RowDefinitions>
+                            <StackLayout>
+                                <Label Text="No data Available" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
+                            </StackLayout>
+                            
 
+                        </CollectionView.EmptyView>
+                        <CollectionView.ItemsLayout>
+                            <GridItemsLayout Orientation="Vertical" Span="6" HorizontalItemSpacing="4" VerticalItemSpacing="4"/>
+                        </CollectionView.ItemsLayout>
 
-                                <ImageButton Source="Assets/3-vertical-dots.png"
-                                    HorizontalOptions="End"
-                                    VerticalOptions="CenterAndExpand"
-                                    WidthRequest="10"
-                                    HeightRequest="16" 
-                                    Grid.Row="0"
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=ThreeDotCommand}"		
-                                    CommandParameter="{Binding .}"
-                                  />
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                            <Frame CornerRadius="12" 
+                                           HorizontalOptions="Center" 
+                                           VerticalOptions="Start"
+                                           HasShadow="True"
+                                           BackgroundColor="White"
+                                           BorderColor="Gray"         
+                                           IsClippedToBounds="True"
+                                           Padding="0">
+                                <Grid Padding="8" Margin="4" x:DataType="model:Book" BackgroundColor="White">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="3*" />
+                                        
+                                        <RowDefinition Height="1*" />
+                                    </Grid.RowDefinitions>
 
-                                <Image Source="{Binding Url_cover}"
-                                                   Grid.Row="1"
-                                                   Aspect="AspectFit" 
-                                                   WidthRequest="30"
-                                                   HeightRequest="150"
-                                                   />
-
-
-                                <StackLayout Grid.Row="2">
-                                    <Label Grid.Column="1"
-                                                       VerticalOptions="Center"
-                                                       Text="{Binding Title}"
-                                                       FontAttributes="Bold"
-                                                       TextColor="Black"    
+                                    <Image Source="{Binding Url_cover}"
+                                                       Grid.Row="0"
+                                                       Aspect="AspectFit" 
+                                                       WidthRequest="30"
+                                                       HeightRequest="150"
                                                        />
 
-                                    -->
-            <!--deskripsi buku opsional-->
-            <!--
-                                    <Label Text="{Binding Description_book}"
-                                                        Grid.Row="1"
-                                                        Grid.Column="1"
-                                                        VerticalOptions="Start"
-                                                        FontAttributes="Italic"
-                                                        TextColor="Black"
-                                                        />
+
+                                    <StackLayout Grid.Row="1">
+                                        <Label Grid.Column="1"
+                                                           VerticalOptions="Center"
+                                                           Text="{Binding Title}"
+                                                           FontAttributes="Bold"
+                                                           TextColor="Black"    
+                                                           />
 
 
-                                    -->
-            <!--<StackLayout.GestureRecognizers>
+
+                                        <Label Text="{Binding Description_book}"
+                                                            Grid.Row="1"
+                                                            Grid.Column="1"
+                                                            VerticalOptions="Start"
+                                                            FontAttributes="Italic"
+                                                            TextColor="Black"
+                                                            />
+
+
+
+                                        <StackLayout.GestureRecognizers>
                                             <TapGestureRecognizer 
-                                                NumberOfTapsRequired="1"
-                                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
-                                                CommandParameter="{Binding .}">
+                                                    NumberOfTapsRequired="1"
+                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
+                                                    CommandParameter="{Binding .}">
                                             </TapGestureRecognizer>
-                                        </StackLayout.GestureRecognizers>-->
-            <!--
-                                </StackLayout>
+                                        </StackLayout.GestureRecognizers>
 
-                            </Grid>
+                                    </StackLayout>
+
+                                </Grid>
+                            </Frame>
 
                         </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
 
-            </RefreshView>-->
+                </RefreshView>
+                
+                
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
