feat : add book with date

--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
@@ -14,5 +14,6 @@
         <Label Text="Description:" FontSize="Medium" TextColor="Black"/>
         <Label Text="{Binding Description_book}" FontSize="Small" TextColor="Black"/>
         <Label Text="{Binding Publisher}" FontSize="Small" TextColor="Black"/>
+        <Label Text="{Binding Year_published}" FontSize="Small" TextColor="Black"/>
     </StackLayout>
 </ContentPage>
