--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/LoginPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/LoginPage.xaml
@@ -11,7 +11,9 @@
                 <Entry Placeholder="Email"></Entry>
                 <Entry Placeholder="Password" IsPassword="True"></Entry>
                 <Button BackgroundColor="#009BF0" CornerRadius="10" TextColor="White" Text="Sign In" Margin="0,20"
-                        Command="{Binding LoginCommand}"></Button>
+                        Command="{Binding LoginCommand}">
+                    <!--CommandParameter="{Binding Role}" TAMBAHIN INI DI BUTTON --> 
+                </Button>
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Don't Have an account?"></Label>
                     <Label Text="Sign Up" TextColor="#009BF0">
